GUI: Add comprehensive error message handling